--- a/ChurchSigth/styles/styles.css
+++ b/ChurchSigth/styles/styles.css
@@ -11,3 +11,21 @@ a {
     color: white;
     margin: 40px;
 }
+
+h1 {
+    color: steelblue;
+}
+
+img {
+    width: 800px;
+    border: 4px solid steelblue;
+}
+
+p {
+    padding: 10px;
+}
+
+footer {
+    background-color: steelblue;
+    color: white;
+}
