--- a/church_sigth/styles/styles.css
+++ b/church_sigth/styles/styles.css
@@ -17,12 +17,12 @@ h1 {
 }
 
 img {
-    width: 800px;
+    width: 80%;
     border: 4px solid steelblue;
 }
 
 p {
-    padding: 10px;
+    padding: 80%;
 }
 
 footer {
