--- a/church_sigth/styles/styles.css
+++ b/church_sigth/styles/styles.css
@@ -1,5 +1,3 @@
-
-
 img {
     width: 80%;
     border: 4px solid steelblue;
@@ -7,4 +5,8 @@ img {
 
 p {
     width: 80%;
+}
+
+a {
+    font-size: 1.5em;
 }
