--- a/church_sigth/styles/styles.css
+++ b/church_sigth/styles/styles.css
@@ -1,3 +1,11 @@
+/* 
+
+* {
+    border: 2px solid blue;
+}
+
+*/
+
 img {
     width: 80%;
     border: 4px solid steelblue;
@@ -13,9 +21,7 @@ a {
     font-size: 1.5em;
 }
 
-* {
-    border: 2px solid blue;
-}
+
 
 h1, nav, footer {
     text-align: center;
