--- a/church_sigth/styles/styles.css
+++ b/church_sigth/styles/styles.css
@@ -21,8 +21,6 @@ a {
     font-size: 1.5em;
 }
 
-
-
 h1, nav, footer {
     text-align: center;
 }
@@ -31,4 +29,8 @@ main p {
     margin: 50px auto;
     width: 80%;
     text-align: center;
+}
+
+nav, footer {
+    background-color:  steelblue;
 }
