--- a/practice_folder/styles/styles.css
+++ b/practice_folder/styles/styles.css
@@ -1,4 +1,34 @@
+* {
+    border: 2px solid blue;
+}
+
 footer {
     background-color: steelblue;
     color: white;
+}
+footer p {
+    padding: 25px;
+}
+
+h1 {
+    margin: 50px 0;
+    text-align: center;
+}
+
+nav {
+    background-color: steelblue;
+    padding: 25px;
+    text-align: center;
+}
+
+a {
+    color: white;
+    padding: 25px;
+}
+
+img {
+    border: 4px solid steelblue;
+    width: 90%;
+    display: block;
+    margin: 0 auto;
 }
