--- a/wo5_chalige/styles/styles.css
+++ b/wo5_chalige/styles/styles.css
@@ -4,19 +4,21 @@
 
 #threeimg{
     background-color: rgb(84, 84, 84);
-    border: solid rgb(84, 84, 84);
     text-align: center;
     padding: 30px;
+    box-sizing: border-box;
+    margin: -5px auto;
+    width: 100%;
+
     
 }
 #threeimg img{
-    display: inline-block;
     width: 23%;
     border-radius: 50%;
     border: 10px solid gray;
-    margin: 0 10px;
+    margin: 0 20px;
 }
 
-#hfoor h6 {
+#hfoot p { 
     text-align: center;
 }
