--- a/wwr/styles/site-plan-rafting.css
+++ b/wwr/styles/site-plan-rafting.css
@@ -9,7 +9,7 @@
 
   /* change the values below to your chosen font(s) */
   --heading-font: "Rock Salt";
-  --paragraph-font: Roboto, Helvetica, sans-serif;
+  --paragraph-font: "Roboto", Helvetica, sans-serif;
 
   /* these colors below should be chosen from among your palette colors above */
   --headline-color-on-white: #4B362A;  /* headlines on a white background */ 
