--- a/positioning/positionstyles.css
+++ b/positioning/positionstyles.css
@@ -69,34 +69,31 @@
 .content3 {
   /* This is the parent of the activity 3 boxes. */
   display: grid;
-  grid-template-columns: 1fr 1fr;
-  
+  grid-template-columns: 300px 20px 300px;
+  grid-template-rows: 1fr 2fr 1fr;  
 }
 .red3 {
-  width: 100%; 
+  width: auto;
   height: 100px; 
   background-color: red;
-  grid-column: 1/3;
+  grid-column: 1/4;
+  grid-row: 1/2;
 } 
 .green3 {
-  width: 100px; 
-  height: 200px; 
   background-color: green;
-  padding-right: 300px;
-  margin-right: 35px;
+  grid-column: 1/2;
+  grid-row: 2/4;
 } 
 .yellow3 {
-  width: 100px; 
-  height: 200px; 
   background-color: gold;
-  padding-right: 300px;
-  margin-left: 35px;
+  grid-column: 3/4;
+  grid-row: 2/4;
 } 
 .blue3 {
-  width: 100%;
   height: 100px; 
   background-color: blue;
-  grid-column: 1/3;
+  grid-column: 1/4;
+  grid-row: 3/4;
 } 
 /* Activity 4 styles */ 
 .content4 {
