--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -1,14 +1,20 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&family=Rock+Salt&display=swap');
 
+p {font-family: "Roboto", Helvetica, sans-serif;}
+h1,h2,h3,h4,h5,h6 {font-family: "Rock Salt";}
+
+/*
 * {
     border: 2px solid darkblue;
 }
+*/
 
 #content {
     max-width: 1600px;
     margin: 0 auto;
 }
 
+header {background-color: #D4CA85;}
 header {
     display: grid;
     grid-template-columns: 150px auto;
@@ -17,21 +23,36 @@ header {
 nav a {text-align: center; padding: 35px;}
 nav a {color: #275738; text-decoration: none; font-size: 1.2em; padding: 35px;}
 nav a:hover {color: #4B362A;}
-
-#hero-msg h1, #hero-msg h4 {text-align: center; color: #FBF8F2;}
-
-.button-box {text-align: center;}
+nav {
+    display: flex;
+    justify-content: space-around;
+}
 
 main section {text-align: center;}
 main section image {box-sizing: border-box;}
 
-#background {
-    height: 725px;
-    background-color:#275738;
+body {
+    background-color: #fcfbfb;
+    font-family: Raleway, Arial, sans-serif;
+    font-size: 22px;
+    margin: 0;
+    padding: 0;
 }
 
-body {background-color: #FBF8F2;}
-header {background-color: #D4CA85;}
+footer {background-color: #FBF8F2; padding: 25px 50px; margin-top: 200px;}
+footer a {color: #275738; text-decoration: none; font-size: 1.2em;}
+footer:hover {color: #4B362A;}
+footer .social img {padding-top: 15px;}
+footer {
+    background-color: #FBF8F2;
+    padding: 25px 50px;
+    margin-top: 200px; 
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.button-box {text-align: center;}
 
 .book, .join {
     color:#275738;
@@ -43,22 +64,21 @@ header {background-color: #D4CA85;}
     border-radius: 5px;
 }
 .book:hover, .join:hover {color: #3D7E55;}
-.msg {color:#975D2E; padding: 35px;}
-.msg p {padding-bottom: 15px;}
-footer {background-color: #FBF8F2; padding: 25px 50px; margin-top: 200px;}
-footer a {color: #275738; text-decoration: none; font-size: 1.2em;}
-footer:hover {color: #4B362A;}
-footer .social img {padding-top: 15px;}
 
 .logo {width: 80px;}
 
 .home-title {margin-top: 10px;}
-.card-img {border: 10px #4B362A;}
+
 .card-img {
-    border: 10px solid #d9c2a3;
+    border: 10px solid #4B362A;
     transition: transform .5s;
     box-shadow: 5px 5px 10px #FBF8F2;
 }
+.card-img:hover {
+    opacity: .6;
+    transform: scale(1.1);
+}
+
 .icon {
     padding-top: 10px;
     display: block;
@@ -69,13 +89,6 @@ footer .social img {padding-top: 15px;}
     margin: 200px 0;
 }
 
-body {
-    background-color: #fcfbfb;
-    font-family: Raleway, Arial, sans-serif;
-    font-size: 22px;
-    margin: 0;
-    padding: 0;
-}
 h2 {
     margin: 0;
 }
@@ -86,26 +99,9 @@ h2 {
     align-self: center;
 }
 
-.mountains {
-    padding-top: 45px;
-}
 
-/* grid place */
-
-header {
-    display: grid;
-    grid-template-columns: 150px auto;
-}
-
-nav {
-    display: flex;
-    justify-content: space-around;
-}
-
-#heor-img {
-    width: 100%;
-}
-
+#hero-msg h1, #hero-msg h4 {text-align: center; color: #FBF8F2;}
+#hero-img {width: 100%;}
 #hero {
     display: grid;
     grid-template-columns: 1fr 3fr 1fr;
@@ -131,11 +127,14 @@ nav {
     margin-top: 100px;
 }
 
-.mountains {
-    width: 100%;
+.home-grid {
+    display: grid;
+    grid-template-columns: repeat(10, 1fr);
+    grid-template-rows: 1fr 3fr 6/7fr 1/2fr 2fr 2/3fr 3/4fr 1fr;
+
 }
 
-.rovers-card {
+.rivers-card {
     grid-column: 2/4;
     grid-row: 2/3;
 }
@@ -151,32 +150,20 @@ nav {
 }
 
 #background {
+    height: 725px;
+    background-color:#275738;
     grid-column: 1/11;
     grid-row: 4/9;
 }
 
 .mountains {
+    width: 100%;
     grid-column: 2/7;
     grid-row: 5/8;
+    /*padding-top: 45px;*/
+    box-shadow: 5px 5px 10px #6f7364;
 }
 
-.msg {
-    grid-column: 6/10;
-    grid-row: 6/7;
-}
-
-footer {
-    background-color: #FBF8F2;
-    padding: 25px 50px;
-    margin-top: 200px; 
-    display: flex;
-    justify-content: space-around;
-}
-
-.card-img:hover {
-    opacity: .6;
-    transform: scale(1.1);
-}
 .msg {
     background-color: #FBF8F2;
     padding: 35px;
@@ -184,18 +171,209 @@ footer {
     grid-row: 6/7;
     box-shadow: 5px 5px 10px #6f7364;
     line-height: 1.5em;
+    color:#975D2E;
 }
-.mountains {
+.msg p {padding-bottom: 15px;}
+
+/* -------------- Galory section ----------------- */
+
+#slideH1{
+    text-align: center;
+    z-index: 4; /*rip it dont work -- for now*/
+}
+#gridGalory {
+    display: grid;
+    gap: 20px;
+    margin: 5px;
+    border: 10px solid #275738;
+    background-color: #d9c2a3;
+    justify-content: center;
+    align-content: center;
+    grid-template-columns: 1fr 1fr 1/2fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr;
+}
+#gridGalory * {
+    margin: 10px;
+    text-align: left;
+    font-size: 32px 
+}
+
+#mainImg {
     width: 100%;
-    grid-column: 2/7;
-    grid-row: 5/8;
-    box-shadow: 5px 5px 10px #6f7364;
+    grid-column-start: 1;
+    grid-column-end: 3;
+    grid-row-start: 1;
+    grid-row-end: 3;
+}
+#mainP {
+    
+    grid-column-start: 3;
+    grid-column-end: 5;
+    grid-row-start: 1;
+    grid-row-end: 3;
+}
+
+
+        
+/* Slideshow container */
+.slideshow-container {
+    width: calc(100%);
+    position: relative;
+    margin-top: -161px;
+    background-color:#f2f2f2;
+    
+}
+.slideshow-container p {
+    padding: 20px;
+    text-align: start;
+    font-size: 35px;
+}
+      
+/* Next & previous buttons */
+.prev, .next {
+    cursor: pointer;
+    position: absolute;
+    top: calc(0% + 450px);
+    width: auto;
+    padding: 16px;
+    color:#f2f2f2;
+    font-weight: bold;
+    font-size: 40px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+    background-color: #4B362A;
+    opacity: .6;
+}
+/* Position the "next button" to the right */
+.next {
+    right: 0;
+    border-radius: 3px 0 0 3px;
+}
+      
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+    background-color: rgba(0,0,0,0.8);
+}
+      
+/* Caption text */
+.text {
+    color: #f2f2f2;
+    font-size: 15px;
+    padding: 8px 12px;
+    position: absolute;
+    bottom: 8px;
+    width: 100%;
+    text-align: center;
+}
+      
+/* Number text (1/3 etc) */
+.numbertext {
+    color: #f2f2f2;
+    font-size: 12px;
+    padding: 8px 12px;
+    position: absolute;
+    top: 0;
+}
+      
+/* Fading animation */
+.fade {
+    animation-name: fade;
+    animation-duration: 1.5s;
+}
+      
+@keyframes fade {
+    from {opacity: .4} 
+    to {opacity: 1}
+}
+
+/* ---------------------    Form section or contact us section ------------------------ */
+
+form {
+    /* Center the form on the page */
+    margin: 0 auto;
+    width: 400px;
+    /* Form outline */
+    padding: 1em;
+    border: 1px solid #ccc;
+    border-radius: 1em;
+}
+  
+ul {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+}
+  
+form li + li {
+    margin-top: 1em;
+}
+  
+label {
+    /* Uniform size & alignment */
+    display: inline-block;
+    width: 90px;
+    text-align: right;
+}
+  
+input, textarea {
+    /* To make sure that all text fields have the same font settings
+    By default, textareas have a monospace font */
+    font: 1em sans-serif;
+  
+    /* Uniform text field size */
+    width: 300px;
+    box-sizing: border-box;
+  
+    /* Match form field borders */
+    border: 1px solid #999;
+}
+  
+input:focus, textarea:focus {
+    /* Additional highlight for focused elements */
+    border-color: #000;
+}
+  
+textarea {
+    /* Align multiline text fields with their labels */
+    vertical-align: top;
+  
+    /* Provide space to type some text */
+    height: 5em;
+}
+  
+.button {
+    /* Align buttons with the text fields */
+    padding-left: 90px; /* same size as the label elements */
+}
+  
+button {
+    /* This extra margin represent roughly the same space as the space
+    between the labels and their text fields */
+    margin-left: 0.5em;
+}
+
+#feedback {
+    background-color: antiquewhite;
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    padding: .5em;
+    /* make this element invisible until we are ready for it */
+    display: none;      
+}
+.moveDown {
+    margin-top: 3em;
 }
 
 @media screen and (max-width: 900px) {
     #hero, .home-grid {
         display: block;
         height: auto;
+    }
+    .prev, .next,.text {
+        font-size: 11px
     }
     nav, footer {
         flex-direction: column;
