--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&family=Rock+Salt&display=swap');
 
 p {font-family: "Roboto", Helvetica, sans-serif;}
-h1,h2,h3,h4,h5,h6 {font-family: "Rock Salt";}
+h1,h2,h3,h4,h5,h6 {font-family: "Rock Salt";} /* to change things just overide*/
 
 /*
 * {
@@ -73,6 +73,7 @@ footer {
     border: 10px solid #4B362A;
     transition: transform .5s;
     box-shadow: 5px 5px 10px #FBF8F2;
+    width: 100%;
 }
 .card-img:hover {
     opacity: .6;
@@ -183,35 +184,78 @@ h2 {
 }
 #gridGalory {
     display: grid;
-    gap: 20px;
-    margin: 5px;
+    gap: 25px;
+    margin: 10px;
+    padding: 10px;
     border: 10px solid #275738;
     background-color: #d9c2a3;
     justify-content: center;
+    justify-items: center;
     align-content: center;
-    grid-template-columns: 1fr 1fr 1/2fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr auto 1fr 1fr;
     grid-template-rows: 1fr 1fr 1fr 1fr;
 }
 #gridGalory * {
     margin: 10px;
     text-align: left;
-    font-size: 32px 
+    font-size: 32px;
+    max-width: 800px;
 }
 
 #mainImg {
     width: 100%;
     grid-column-start: 1;
-    grid-column-end: 3;
+    grid-column-end: 4;
     grid-row-start: 1;
     grid-row-end: 3;
 }
 #mainP {
-    
-    grid-column-start: 3;
-    grid-column-end: 5;
+    overflow-y: auto;
+    overflow-x: hidden;
+    max-height: 871px;
+    grid-column-start: 4;
+    grid-column-end: 6;
     grid-row-start: 1;
     grid-row-end: 3;
 }
+#GGcomment1 {
+    width: 100%;
+    grid-column-start: 1;
+    grid-column-end: 2;
+    grid-row-start: 3;
+    grid-row-end: 5;
+}
+
+#GGcomment2 {
+    width: 100%;
+    grid-column-start: 2;
+    grid-column-end: 3;
+    grid-row-start: 3;
+    grid-row-end: 5;
+}
+#GGdivider {
+    width: 100%;
+    grid-column-start: 3;
+    grid-column-end: 4;
+    grid-row-start: 3;
+    grid-row-end: 5;
+}
+#GGcomment3 {
+    width: 100%;
+    grid-column-start: 4;
+    grid-column-end: 5;
+    grid-row-start: 3;
+    grid-row-end: 5;
+}
+#GGcomment4 {
+    width: 100%;
+    grid-column-start: 5;
+    grid-column-end: 6;
+    grid-row-start: 3;
+    grid-row-end: 5;
+}
+
+
 
 
         
@@ -221,6 +265,7 @@ h2 {
     position: relative;
     margin-top: -161px;
     background-color:#f2f2f2;
+    
     
 }
 .slideshow-container p {
@@ -253,7 +298,7 @@ h2 {
       
 /* On hover, add a black background color with a little bit see-through */
 .prev:hover, .next:hover {
-    background-color: rgba(0,0,0,0.8);
+    background-color: rgba(0,0,0,0.9);
 }
       
 /* Caption text */
