--- a/wo9_challenge/styles/styles.css
+++ b/wo9_challenge/styles/styles.css
@@ -34,12 +34,14 @@ sup {
 }
 
 footer {
-    background-color: gray;
+    background-color: steelblue;
     text-align: center;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr; 
-    /*border-radius: 0px 0px 15px 15px;*/ 
-}   
+    grid-template-columns: 1fr 1fr 1fr;
+    border-radius: 0px 0px 15px 15px;
+    padding-bottom: 15px;
+}
+
 footer div {
     background-color: steelblue;
     border: 1px solid gray;
