--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -29,7 +29,7 @@ nav {
 }
 
 main section {text-align: center;}
-main section image {box-sizing: border-box;}
+main section img {box-sizing: border-box;}
 
 body {
     background-color: #fcfbfb;
@@ -178,34 +178,42 @@ h2 {
 
 /* -------------- Galory section ----------------- */
 
-#slideH1{
+.slideH1{
     text-align: center;
-    z-index: 4; /*rip it dont work -- for now*/
+    order: 1  
+}
+#h1GG {
+    margin-top: 50px;
+    background-color: #f2f2f2;
+    padding: 30px;
 }
 #gridGalory {
     display: grid;
-    gap: 25px;
-    margin: 10px;
+    gap: 30px;
+    margin-top: -25px;
     padding: 10px;
+    max-width: 1600px;
     border: 10px solid #275738;
     background-color: #d9c2a3;
     justify-content: center;
     justify-items: center;
     align-content: center;
-    grid-template-columns: 1fr 1fr auto 1fr 1fr;
-    grid-template-rows: 1fr 1fr 1fr 1fr;
+    grid-template-columns: repeat(4, 350px);
+    grid-template-rows: repeat(4, 250px);
+    margin-bottom: -100px;
 }
 #gridGalory * {
     margin: 10px;
     text-align: left;
     font-size: 32px;
     max-width: 800px;
+    box-sizing: border-box;
 }
 
 #mainImg {
     width: 100%;
     grid-column-start: 1;
-    grid-column-end: 4;
+    grid-column-end: 3;
     grid-row-start: 1;
     grid-row-end: 3;
 }
@@ -213,8 +221,8 @@ h2 {
     overflow-y: auto;
     overflow-x: hidden;
     max-height: 871px;
-    grid-column-start: 4;
-    grid-column-end: 6;
+    grid-column-start: 3;
+    grid-column-end: 5;
     grid-row-start: 1;
     grid-row-end: 3;
 }
@@ -225,7 +233,6 @@ h2 {
     grid-row-start: 3;
     grid-row-end: 5;
 }
-
 #GGcomment2 {
     width: 100%;
     grid-column-start: 2;
@@ -233,24 +240,17 @@ h2 {
     grid-row-start: 3;
     grid-row-end: 5;
 }
-#GGdivider {
+#GGcomment3 {
     width: 100%;
     grid-column-start: 3;
     grid-column-end: 4;
     grid-row-start: 3;
     grid-row-end: 5;
 }
-#GGcomment3 {
+#GGcomment4 {
     width: 100%;
     grid-column-start: 4;
     grid-column-end: 5;
-    grid-row-start: 3;
-    grid-row-end: 5;
-}
-#GGcomment4 {
-    width: 100%;
-    grid-column-start: 5;
-    grid-column-end: 6;
     grid-row-start: 3;
     grid-row-end: 5;
 }
@@ -263,9 +263,8 @@ h2 {
 .slideshow-container {
     width: calc(100%);
     position: relative;
-    margin-top: -161px;
+    margin-top: 1px;
     background-color:#f2f2f2;
-    
     
 }
 .slideshow-container p {
@@ -278,7 +277,7 @@ h2 {
 .prev, .next {
     cursor: pointer;
     position: absolute;
-    top: calc(0% + 450px);
+    top: calc(0% + 700px);
     width: auto;
     padding: 16px;
     color:#f2f2f2;
@@ -312,13 +311,13 @@ h2 {
     text-align: center;
 }
       
-/* Number text (1/3 etc) */
+/* this is the H1 actualy */
 .numbertext {
     color: #f2f2f2;
-    font-size: 12px;
+    font-size: 20px;
     padding: 8px 12px;
-    position: absolute;
-    top: 0;
+    position: center;
+    
 }
       
 /* Fading animation */
