--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -317,7 +317,7 @@ h2 {
     font-size: 20px;
     padding: 8px 12px;
     position: center;
-    
+    margin-top: 50px;
 }
       
 /* Fading animation */
