--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -198,16 +198,18 @@ h2 {
     justify-content: center;
     justify-items: center;
     align-content: center;
-    grid-template-columns: repeat(4, 350px);
-    grid-template-rows: repeat(4, 250px);
+    grid-template-columns: repeat(4, calc(25% - 22px)); /* 350px */
+    grid-template-rows: repeat(4, 250px);    /* 250px */
     margin-bottom: -100px;
+    
 }
 #gridGalory * {
-    margin: 10px;
+    /* margin: 10px; */
     text-align: left;
     font-size: 32px;
     max-width: 800px;
     box-sizing: border-box;
+    padding: 20px 0;
 }
 
 #mainImg {
