--- a/wwr/styles/style.css
+++ b/wwr/styles/style.css
@@ -189,9 +189,9 @@ h2 {
 }
 #gridGalory {
     display: grid;
-    gap: 30px;
-    margin-top: -25px;
     padding: 10px;
+    /* gap: 30px; */
+    margin-top: -25px;
     max-width: 1600px;
     border: 10px solid #275738;
     background-color: #d9c2a3;
